# serializer version: 1
# name: TestCategoricalOutputs.test_rf_regressor_arf_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.36231 |    0.00299 |   -0.16632 |     0.02213 |     -0.2664  |   -0.07446 |   -0.21242 |    -0.00734 |         -0.36231 |      -0.00477 |       -0.07285 |
      |  2 |            2 | 2.20594 | -0.35176 |    0.21779 |   -0.33603 |    -0.10107 |     -0.20214 |    0.11996 |   -0.18711 |    -0.05117 |         -0.35176 |       0.0767  |       -0.04216 |
      |  3 |            3 | 2.20594 | -0.29834 |    0.23658 |   -0.87792 |     0.59291 |     -0.69573 |    1.02629 |   -0.19643 |    -0.15363 |         -0.29834 |       1.57257 |        1.11513 |
      |  4 |            4 | 2.20594 |  0.07028 |    0.13482 |    0.21377 |     0.10103 |      0.09261 |   -0.21804 |    0.06507 |    -0.00103 |          0.07028 |      -0.04424 |       -0.02182 |
      |  5 |            5 | 2.20594 | -0.04908 |   -0.13529 |    0.1723  |     0.07487 |      0.19342 |    0.23389 |    0.03381 |     0.01073 |         -0.04908 |      -0.28172 |       -0.1305  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 |  0.04553 |    0.06324 |    0.072   |     0.08746 |      0.0666  |    0.05776 |    0.06107 |     0.08166 |          0.04553 |       0.08577 |        0.06298 |
      |  2 |            2 |      0 |  0.04967 |    0.0755  |    0.08292 |     0.04053 |      0.08959 |    0.06387 |    0.08633 |     0.04873 |          0.04967 |       0.08312 |        0.0965  |
      |  3 |            3 |      0 |  0.25123 |    0.45487 |    0.39868 |     0.52751 |      0.38918 |    0.40214 |    0.37034 |     0.46273 |          0.25123 |       0.3726  |        0.55258 |
      |  4 |            4 |      0 |  0.02923 |    0.07196 |    0.05463 |     0.0264  |      0.03763 |    0.07306 |    0.04758 |     0.02184 |          0.02923 |       0.04415 |        0.05334 |
      |  5 |            5 |      0 |  0.04602 |    0.09968 |    0.08252 |     0.07898 |      0.06597 |    0.08746 |    0.0639  |     0.06765 |          0.04602 |       0.0651  |        0.08142 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.61446 |    0.04901 |   -0.20429 |     0.05854 |     -0.01843 |   -0.30672 |   -0.31741 |     0.20687 |         -0.27074 |      -0.05106 |       -0.03538 |
      |  2 |            2 | 2.20594 | -0.18132 |   -0.0493  |   -0.37648 |     0.00677 |      0.03688 |   -0.10042 |   -0.33978 |     0.15745 |         -0.34596 |       0.05049 |       -0.06709 |
      |  3 |            3 | 2.20594 |  0.06795 |    0.55313 |   -0.10558 |     0.04641 |      0.0555  |    0.91979 |    0.16065 |     0.07676 |          0.21054 |       0.02469 |        0.01326 |
      |  4 |            4 | 2.20594 |  0.45858 |    0.06925 |    0.13524 |     0.0055  |     -0.15265 |   -0.15815 |    0.07671 |     0.07491 |          0.01334 |      -0.02022 |       -0.03975 |
      |  5 |            5 | 2.20594 |  0.25606 |    0.05952 |   -0.06425 |     0.11375 |      0.07671 |   -0.04326 |   -0.31608 |     0.15842 |         -0.04788 |      -0.07776 |       -0.04188 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 |  0.15561 |    0.05458 |    0.0797  |     0.14376 |      0.11945 |    0.11073 |    0.15751 |     0.17575 |          0.06787 |       0.12396 |        0.07413 |
      |  2 |            2 |      0 |  0.09482 |    0.04679 |    0.05639 |     0.09358 |      0.08511 |    0.07729 |    0.12785 |     0.12362 |          0.04754 |       0.08572 |        0.0566  |
      |  3 |            3 |      0 |  0.18641 |    0.06278 |    0.07261 |     0.13008 |      0.1326  |    0.14547 |    0.18614 |     0.21434 |          0.08356 |       0.13245 |        0.06451 |
      |  4 |            4 |      0 |  0.14742 |    0.05902 |    0.07936 |     0.08969 |      0.13999 |    0.07906 |    0.14453 |     0.20546 |          0.05157 |       0.09118 |        0.05813 |
      |  5 |            5 |      0 |  0.11281 |    0.05832 |    0.07897 |     0.10119 |      0.11434 |    0.10379 |    0.22383 |     0.25071 |          0.05718 |       0.11522 |        0.0758  |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |   -0.79968 |   -0.13644 |   -0.15381 |     -0.41414 |
      |  2 |            2 | 2.20594 |   -0.51731 |   -0.13323 |   -0.18354 |     -0.37467 |
      |  3 |            3 | 2.20594 |    0.5397  |    1.04017 |    0.08033 |      0.36288 |
      |  4 |            4 | 2.20594 |    0.61314 |   -0.10122 |    0.07779 |     -0.12697 |
      |  5 |            5 | 2.20594 |    0.05662 |    0.15546 |    0.00415 |     -0.14287 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |           -0 |
      |  5 |            5 |      0 |          0 |          0 |          0 |           -0 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.53741 |    0.08809 |    0.17954 |     0.08285 |     -0.21879 |   -0.23398 |   -0.24773 |    -0.06267 |         -0.53741 |      -0.10813 |        0.09158 |
      |  2 |            2 | 2.20594 | -0.39784 |    0.09606 |   -0.06547 |     0.01965 |     -0.23132 |   -0.03629 |   -0.15938 |    -0.02738 |         -0.39784 |      -0.01998 |        0.01102 |
      |  3 |            3 | 2.20594 |  0.03898 |    0.47993 |    0.0528  |     0.02785 |      0.28801 |    0.64054 |    0.27559 |     0.04982 |          0.03898 |       0.12401 |        0.00657 |
      |  4 |            4 | 2.20594 |  0.28661 |    0.01993 |   -0.0211  |     0.14853 |     -0.04934 |   -0.36831 |    0.13084 |     0.03773 |          0.28661 |       0.04074 |       -0.0495  |
      |  5 |            5 | 2.20594 |  0.00777 |    0.02683 |    0.06315 |     0.12703 |      0.05938 |   -0.13108 |   -0.08621 |    -0.02088 |          0.00777 |       0.02809 |       -0.00848 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 |  0.08168 |    0.12827 |    0.12045 |     0.08931 |      0.06957 |    0.12949 |    0.09227 |     0.06218 |          0.08168 |       0.13615 |        0.09915 |
      |  2 |            2 |      0 |  0.05519 |    0.0689  |    0.08147 |     0.07386 |      0.05313 |    0.06814 |    0.07118 |     0.05671 |          0.05519 |       0.08544 |        0.08011 |
      |  3 |            3 |      0 |  0.04697 |    0.09975 |    0.06382 |     0.07191 |      0.09566 |    0.07239 |    0.08317 |     0.07349 |          0.04697 |       0.04965 |        0.04635 |
      |  4 |            4 |      0 |  0.0541  |    0.08579 |    0.06809 |     0.04347 |      0.06875 |    0.08202 |    0.07493 |     0.05323 |          0.0541  |       0.07983 |        0.06551 |
      |  5 |            5 |      0 |  0.03302 |    0.06167 |    0.05989 |     0.12095 |      0.06832 |    0.06425 |    0.05193 |     0.08403 |          0.03302 |       0.04283 |        0.02811 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |   -1.32031 |   -0.27512 |    0.00976 |      0.08161 |
      |  2 |            2 | 2.20594 |   -1.18476 |   -0.16226 |   -0.02161 |      0.15986 |
      |  3 |            3 | 2.20594 |    1.01491 |    0.84109 |    0.10983 |      0.05725 |
      |  4 |            4 | 2.20594 |    0.41444 |   -0.2297  |    0.14668 |      0.13133 |
      |  5 |            5 | 2.20594 |   -0.03899 |    0.11437 |   -0.00338 |      0.00138 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |          0 |            0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |            0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |            0 |
      |  5 |            5 |      0 |         -0 |          0 |         -0 |            0 |
    ''',
  })
# ---
